# got-ocr2-api

./: README.md  api_server.py  convert_hf_to_gguf.py  pdf_file_utils.py  prompt_utils.py  pyproject.toml  vary_b.py
weights/: embedding_weights.pt  mm_projector_vary.params  vision_tower_high.params
